--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: ./project
-          file: ./Dockerfile
+          context: project
+          file: project/Dockerfile
           platforms: linux/amd64
           push: true
           tags: mojtaaba/techtrends:latest
