--- a/project/kubernetes/deploy.yaml
+++ b/project/kubernetes/deploy.yaml
@@ -1,11 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+  labels:
+    app: techtrends
   name: techtrends
   namespace: sandbox
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: techtrends
   template:
+    metadata:
+      labels:
+        app: techtrends
     spec:
       containers:
         - image: mojtaaba/techtrends:latest
