--- a/project/kubernetes/service.yaml
+++ b/project/kubernetes/service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    app: techtrends
   name: techtrends
   namespace: sandbox
 spec:
@@ -8,4 +10,6 @@ spec:
   - port: 4111
     protocol: TCP
     targetPort: 3111
+  selector:
+    app: techtrends
   type: ClusterIP
